# storage/api-docs/api-docs.json
@@ -13,168 +13,7 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/api/auth/login": {
-            "post": {
-                "tags": [
-                    "Authentication"
-                ],
-                "summary": "Login",
-                "description": "Login",
-                "operationId": "8dcb70df1020986038d098cc08d05dae",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "email": {
-                                        "type": "string",
-                                        "example": "jauharimalikupil@gmail.com"
-                                    },
-                                    "password": {
-                                        "type": "string",
-                                        "example": "admin123"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Login"
-                    },
-                    "400": {
-                        "description": "Bad request"
-                    },
-                    "404": {
-                        "description": "Resource Not Found"
-                    }
-                }
-            }
-        },
-        "/api/auth/register": {
-            "post": {
-                "tags": [
-                    "Authentication"
-                ],
-                "summary": "Register User",
-                "description": "Register New User",
-                "operationId": "d764dd091cc4494ae0baf360b03319f3",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "name": {
-                                        "type": "string",
-                                        "example": "Jauhari Malik"
-                                    },
-                                    "email": {
-                                        "type": "string",
-                                        "example": "jauharimalikupil@gmail.com"
-                                    },
-                                    "password": {
-                                        "type": "string",
-                                        "example": "admin123"
-                                    },
-                                    "password_confirmation": {
-                                        "type": "string",
-                                        "example": "admin123"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Register New User Data"
-                    },
-                    "400": {
-                        "description": "Bad request"
-                    },
-                    "404": {
-                        "description": "Resource Not Found"
-                    }
-                }
-            }
-        },
-        "/api/auth/me": {
-            "get": {
-                "tags": [
-                    "Authentication"
-                ],
-                "summary": "Authenticated User Profile",
-                "description": "Authenticated User Profile",
-                "operationId": "b9abb1a7a74670a19c215c2c133f14d8",
-                "responses": {
-                    "200": {
-                        "description": "Authenticated User Profile"
-                    },
-                    "400": {
-                        "description": "Bad request"
-                    },
-                    "404": {
-                        "description": "Resource Not Found"
-                    }
-                },
-                "security": [
-                    {
-                        "bearer": []
-                    }
-                ]
-            }
-        },
-        "/api/auth/logout": {
-            "post": {
-                "tags": [
-                    "Authentication"
-                ],
-                "summary": "Logout",
-                "description": "Logout",
-                "operationId": "69281b12abb272c76871f19cb17ca563",
-                "responses": {
-                    "200": {
-                        "description": "Logout"
-                    },
-                    "400": {
-                        "description": "Bad request"
-                    },
-                    "404": {
-                        "description": "Resource Not Found"
-                    }
-                }
-            }
-        },
-        "/api/auth/refresh": {
-            "post": {
-                "tags": [
-                    "Authentication"
-                ],
-                "summary": "Refresh",
-                "description": "Refresh",
-                "operationId": "b2eae7a8032954d25b46c7ec6f489c68",
-                "responses": {
-                    "200": {
-                        "description": "Refresh"
-                    },
-                    "400": {
-                        "description": "Bad request"
-                    },
-                    "404": {
-                        "description": "Resource Not Found"
-                    }
-                },
-                "security": [
-                    {
-                        "bearer": []
-                    }
-                ]
-            }
-        },
-        "/movies": {
+        "/api/movies": {
             "get": {
                 "tags": [
                     "Movies"
@@ -248,7 +87,7 @@
                 }
             }
         },
-        "/movies/{movie}": {
+        "/api/movies/{movie}": {
             "get": {
                 "tags": [
                     "Movies"
